# dynamic-markdown

./: Makefile  README.MD  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml
dynamic_markdown/: __init__.py  __main__.py  processor.py  utils.py
tests/: test_controls.py  test_functions.py  test_injection.py  test_modes.py  test_patterns.py
